--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "watch:webpack": "webpack --watch --progress --mode development --config-name lib",
     "watch:ts": "npm run clear:lib && tsc -w",
     "clear:lib": "del /q lib && for /d %x in (lib\\*) do @rd /s /q \"%x\"",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "pnpm run build",
+    "prepare": "yarn run build:prod"
   },
   "homepage": "https://eliav2.github.io/react-xarrows/",
   "repository": {
@@ -63,7 +64,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.4",
-    "webpack": "^5.44.0",
+    "webpack": "^5.81.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-node-externals": "^3.0.0"
